--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "chalk": "^1.1.3",
     "discord.js": "^11.1.0",
     "image-to-ascii": "^3.0.7",
+    "imperial-metric": "^1.2.1",
+    "temperature": "^1.0.3",
     "urlencode": "^1.1.0",
     "uws": "^0.14.5"
   }
